Tyring to optimize items
Former-commit-id: 81efe487fe989f42a317eb38ce79c409c8df95de

--- a/www/index.html
+++ b/www/index.html
@@ -9,6 +9,7 @@
 	<title>Planera Mera</title>
 	<!-- STYLE -->
 	<link rel="stylesheet" href="assets/css/reset.css" type="text/css" media="screen">
+	<link rel="stylesheet" href="assets/css/style.css" type="text/css" media="screen">
 	
 	<!-- SCRIPTS -->
 	<script type="text/javascript" src="cordova.js"></script>
@@ -25,25 +26,9 @@
 	<script src="src/world.js"></script>
 	<script src="src/room.js"></script>
 	<script src="src/prefabs/alien.js"></script>
+	<script src="src/prefabs/item.js"></script>
 
 </head>
 <body>
-	<script type="text/javascript">
-	(function () {
-		// var w = window.innerWidth * window.devicePixelRatio;
-// 		var h = window.innerHeight * window.devicePixelRatio;
-// 		var game = new Phaser.Game(w, h, Phaser.AUTO, '');
-//
-// 		// Add states
-// 		game.state.add('Boot', GameObj.Boot);
-// 		game.state.add('Preloader', GameObj.Preloader);
-// 		game.state.add('Menu', GameObj.Menu);
-// 		game.state.add('About', GameObj.About);
-// 		game.state.add('Game', GameObj.Game);
-//
-// 		//	Now start the Boot state.
-// 		game.state.start('Boot');
-	})();
-	</script>
 </body>
 </html>
