Working on item sorting for planning stage
Former-commit-id: 006dc0487b13759455fc5bfb98f05fa60b410b3b

--- a/www/index.html
+++ b/www/index.html
@@ -27,6 +27,7 @@
 	<script src="src/room.js"></script>
 	<script src="src/prefabs/alien.js"></script>
 	<script src="src/prefabs/item.js"></script>
+	<script src="src/prefabs/box.js"></script>
 
 </head>
 <body>
