Made a library for audio playback in sequences and with delay
Former-commit-id: 67b83d482e532f4ab9496fef1c6bed79e1aec433

--- a/www/index.html
+++ b/www/index.html
@@ -16,8 +16,6 @@
 	
 	<script src="src/index.js"></script>
 	
-	<script src="src/lib/db.js"></script>
-	
 	<script src="assets/js/phaser.min.js"></script>
 	<script src="src/boot.js"></script>
 	<script src="src/preloader.js"></script>
@@ -25,9 +23,15 @@
 	<script src="src/about.js"></script>
 	<script src="src/world.js"></script>
 	<script src="src/room.js"></script>
+	
+	<!-- Prefabs -->
 	<script src="src/prefabs/alien.js"></script>
 	<script src="src/prefabs/item.js"></script>
 	<script src="src/prefabs/box.js"></script>
+
+	<!-- Libs -->
+	<script src="src/lib/db.js"></script>
+	<script src="src/lib/sound.js"></script>
 
 </head>
 <body>
