A lot of optimization and fixed item placement in the boxes
Former-commit-id: 2c8b1710f23b85732b10fc67bfebe8ffe3fa9a46

--- a/www/index.html
+++ b/www/index.html
@@ -28,6 +28,7 @@
 	<script src="src/prefabs/alien.js"></script>
 	<script src="src/prefabs/item.js"></script>
 	<script src="src/prefabs/box.js"></script>
+	<script src="src/prefabs/cloud.js"></script>
 
 	<!-- Libs -->
 	<script src="src/lib/db.js"></script>
