Fixed back in the room. Added new rooms and other small things
Former-commit-id: b6c5fbbe94821e2f68b09a932d59ab12e51518ae

--- a/www/index.html
+++ b/www/index.html
@@ -23,6 +23,7 @@
 	<script src="src/about.js"></script>
 	<script src="src/world.js"></script>
 	<script src="src/room.js"></script>
+	<script src="src/rocket.js"></script>
 	
 	<!-- Prefabs -->
 	<script src="src/prefabs/alien.js"></script>
