working on rocket and chest
Former-commit-id: ff98d96a7f65450ae0b6644f9d4ee0cec8fdca61

--- a/www/index.html
+++ b/www/index.html
@@ -30,6 +30,7 @@
 	<script src="src/prefabs/item.js"></script>
 	<script src="src/prefabs/box.js"></script>
 	<script src="src/prefabs/cloud.js"></script>
+	<script src="src/prefabs/chest.js"></script>
 
 	<!-- Libs -->
 	<script src="src/lib/db.js"></script>
