--- a/www/index.html
+++ b/www/index.html
@@ -4,6 +4,7 @@
 	<meta name="format-detection" content="telephone=no" />
 	<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
 	<meta name="msapplication-tap-highlight" content="no" />
+	<!-- <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'"> -->
 		
 	<!-- TITLE -->
 	<title>Planera Mera</title>
@@ -12,6 +13,11 @@
 	<link rel="stylesheet" href="assets/css/style.css" type="text/css" media="screen">
 	
 	<!-- SCRIPTS -->
+	
+	<!-- Fast click -->
+	<!-- <script src="components/fastclick/lib/fastclick.js" type="text/javascript" charset="utf-8"></script> -->
+	
+	<!-- Cordova -->
 	<script type="text/javascript" src="cordova.js"></script>
 	
 	<script src="src/index.js"></script>
